Added add item event listener
Added addItem on click listener and electron processes communcations.

--- a/app/index/index.html
+++ b/app/index/index.html
@@ -17,7 +17,7 @@
         <h1>Inventory</h1>
     </header>
     <main class="wrapper" role="application">
-        <button data-action="insert" type="button" class="btn btn-lg btn-circle accent-color"><span class="glyphicon glyphicon-plus"></span></button>
+        <button id="addItem" data-action="insert" type="button" class="btn btn-lg btn-circle accent-color"><span class="glyphicon glyphicon-plus"></span></button>
         <table id="itemsTable" class="table" role="grid" aria-labelledby="itemsTableCaption">
             <caption id="itemsTableCaption">Available Items</caption>
             <thead>
@@ -48,6 +48,12 @@
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/index.js">
+
+    </script>
+    <script type="text/javascript">
+
+    </script>
 </body>
 
 </html>
